# board_insights

./: .gitignore  HOW-TO-DEBUG.md  PROGRESS.md  README.md  TESTING.md  TODO-Analytics.md  TODO-Backend.md  TODO-Blackboard-Integration.md  TODO-DataLayer.md  TODO-Deployment.md  TODO-Documentation.md  TODO-Frontend.md  TODO-MAIN.md  TODO-Phase1-POC.md  TODO-Phase2-MVP.md  TODO-Phase3-Scale.md  TODO-Phase4-Enterprise.md  TODO-Privacy-Security.md  TODO-Risk-Management.md  TODO-STRUCTURE.md  TODO-Testing.md  VERIFY.md  WEEK1-SUMMARY.md  boardinsights.md  mock-blackboard.html  package.json
analytics-wasm/: Cargo.toml
analytics-wasm/src/: lib.rs
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
chrome-extension/icons/: README.md
docs/: architecture.md
scripts/: generate_icons.py
